# ralph

./: CLAUDE.md  Cargo.toml  README.md
doc/: multi-agent.md  overview.md  relevant.md
doc/tbd/: README.md  parallel-agent-cleanup-on-sigint.md  per-role-env-overrides.md
prompts/: implementer.md  planner.md  reviewer.md  tester.md  triager.md
scripts/: status.nu  watch-jj.nu  watch-tasks.nu
src/: agent.rs  config.rs  db.rs  main.rs  nit.rs  orchestrator.rs  scheduler.rs  state.rs  task.rs
